Make logo and text center on mobile, correct spelling

--- a/wp-content/themes/scbc/style.css
+++ b/wp-content/themes/scbc/style.css
@@ -517,6 +517,17 @@ padding: 10px;
   .page .col-sm-3 {
     display:none;
   }
+  header{
+    text-align:center;
+  }
+  #logo_text{
+    position: relative;
+    font-size: 1.5em;
+    top:0;
+    left:0;
+    margin-bottom:0;
+  }
+
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .page .sidebar {
